--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=ConfigServer
+spring.application.name=springConfig
 app.email=sameerahussainar6@gmail.com
 app.owner=sameera
